--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-flags-select": "^2.2.3",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
